--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,10 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+<!--pages/movies/index.wxml-->
+
+<!--导入block区块模板-->
+<import src="block/block.wxml"/>
+
+<!--for循环取出三个区块的数据，填入模板-->
+<view wx:for="{{threeBlockInfo}}" wx:for-item="blockInfo">
+  <template is="template-block" data="{{...blockInfo}}"/>
+</view>  
+
