--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -2,12 +2,24 @@
 .item-container{
   display: flex;
   width:85%;
-  margin: 10rpx auto;
-  background-color: green;
-  height:100rpx;
-  color:white;
+  margin:60rpx auto;
+  background-color: #ffffff;
+  height:178rpx;
+  color:#323232;
 }
 .image{
   width:133rpx;
   height:206rpx;
+  margin-top:-44rpx;
+  border-radius: 18rpx;
+}
+.wrapper{
+  width:100%;
+  height:100%;
+  background-color: #f5f5f5;
+}
+.search{
+  width:100%;
+  height:80rpx;
+  background-color: yellow;
 }
