--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -2,7 +2,9 @@
 <!--导入评分条模板wxml文件，注意别少了后面的 / 符号-->
 <import src="../../templates/ratingbar/ratingbar.wxml" />
 <view class='wrapper'>
-  <view class='search'></view>
+  <view class='search'>
+  <button class='btn-search'>搜索</button>
+  </view>
   <block wx:for="{{movies}}" wx:for-item="item" >
     <view class="item-container" catchtap='catchTapMovie' data-movieid='{{item.id}}'>
       <image class='image' src='{{item.images.large}}'></image>
