--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -25,16 +25,32 @@
   background-color: #f5f5f5;
 }
 .search{
-  width:90%;
-  height:80rpx;
-  margin: 10rpx auto;
-  background-color: #ffffff;
+  width:100%;
+  height:65rpx;
+  background-color: #a90000;
+  padding: 10rpx;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
 }
 .btn-search{
+  line-height: 65rpx;
+  color:#a8a8a8;
+  width: 95%;
+  height:90%;
    background-color: #ffffff;
    font-size:28rpx;
-   line-height: 80rpx;
+   border-radius: 10rpx;
 }
+button::after{
+border:none;
+}
+input{
+outline:none;
+border:none;
+list-style: none;
+}
+
 .title{
   margin-left: 42rpx;
   margin-top:39rpx;
