--- a/pages/index/detail/detail.wxml
+++ b/pages/index/detail/detail.wxml
@@ -1,34 +1,59 @@
 <!--detail.wxml-->
+<!--导入评分条模板wxml文件，注意别少了后面的 / 符号-->
+<import src="../../../templates/ratingbar/ratingbar.wxml" />
+
 <view class='avatar-container'>
-  <image class='avatar' mode="aspectFit" src="{{images}}"></image>
-  <view class='content-wrapper'>
-      <text class='title'>{{title}}</text>
-  
-      <text class='e_title'>{{original_title}}</text>
-      <text class='genres'>{{genres}}</text>
-      <text class='genres'>{{countries}}/{{durations}}</text>
-      <text class='genres'>{{pubdates}}上映</text>
-      <view class='want-watch'>
-      <text class='yellow'>{{wish_count}}</text>
-      <text>人想看</text>
-      </view>
-  </view>
+    <image class='avatar' mode="aspectFit" src="{{images}}"></image>
+    <view class='content-wrapper'>
+        <text class='title'>{{title}}</text>
+
+        <text class='e_title'>{{original_title}}</text>
+        <text class='genres'>{{genres}}</text>
+        <text class='genres'>{{countries}}/{{durations}}</text>
+        <text class='genres'>{{pubdates}}上映</text>
+        <view class='want-watch'>
+            <text class='yellow'>{{wish_count}}</text>
+            <text>人想看</text>
+        </view>
+    </view>
+     <view style="display:flex;flex-direction:column;border:1rpx solid #a5a5a5;margin-right:20rpx;justify-content:center;border-radius:10rpx;height:160rpx;width:150rpx;padding:5rpx 10rpx;margin-top:34rpx;">
+    <text class='average-title'>豆瓣评分</text>
+    <text class='average'>{{rating.average}}</text>
+    <text class='collect'>{{ratings_count}}人</text>
+   </view>
 </view>
-  <view class='container-wrapper-bottom'>
-    <button class='btn'><image class='icon' src="../../../images/heart.png"></image>想看</button>
-     <button class='btn'><image class='icon' src="../../../images/collection.png"></image>收藏</button>
-  </view>
-  <view class='summary' bindtap="changeHeight" style="height:{{height}};">
-  {{summary}}
-  </view>
- <view class='actor' style='margin-top:30rpx;border-top:10rpx solid #a5a5a5;'>
- <text  style='height:80rpx;width:100%;font-size:30rpx;margin:32rpx;font-weight:550'>演职人员</text>
-  <scroll-view scroll-x="true" style="width:100%;white-space: nowrap; display: flex;">
-      <block wx:for="{{casts}}" wx:for-item="item">
-      
-        <image src='{{item.avatars.large}}' style='width:160rpx;height:195rpx;padding:20rpx;border-radius:30rpx;'></image>
-        <!-- <text style="width:50rpx;">{{item.name}}</text> -->
-      
-      </block>
-  </scroll-view>
- </view>
+<view class='container-wrapper-bottom'>
+    <button class='btn'>
+        <image class='icon' src="../../../images/heart.png"></image>想看</button>
+    <button class='btn'>
+        <image class='icon' src="../../../images/collection.png"></image>收藏({{collect_count}})</button>
+</view>
+<view class='summary' bindtap="changeHeight" style="height:{{height}};">
+    {{summary}}
+</view>
+<view class='actor' style='margin-top:30rpx;border-top:10rpx solid rgba(165,165,165,0.1);'>
+    <text style='height:80rpx;width:100%;font-size:30rpx;margin:32rpx;font-weight:550'>演职人员</text>
+    <scroll-view scroll-x="true" style="width:100%;white-space: nowrap; display: flex;">
+        <block wx:for="{{casts}}" wx:for-item="item">
+
+            <image src='{{item.avatars.large}}' style='width:160rpx;height:195rpx;padding:20rpx;border-radius:30rpx;'></image>
+
+        </block>
+    </scroll-view>
+
+    <view class='review-wrapper' wx:for="{{popular_comments}}" wx:for-item="item">
+        <image src='{{item.author.avatar}}'></image>
+        <view style="display:flex;flex-direction:column;flex:1">
+            <text class='author-name'>{{item.author.name}}</text>
+            <text class='signature'>{{item.author.signature}}</text>
+            <text class='review-content'>{{item.content}}</text>
+            <view style='display:flex;justify-content:space-between'>
+                <text class='time'>{{item.created_at}}</text>
+                <text class='useful'>有用({{item.useful_count}})</text>
+            </view>
+            <view class='line'></view>
+            <!--评分条-->
+            <!-- <template is="template-ratingbar-stars" wx:if="{{item.rating.value!='0'}}" data="{{...item.rating}}" /> -->
+        </view>
+    </view>
+</view>
