--- a/pages/index/detail/detail.wxss
+++ b/pages/index/detail/detail.wxss
@@ -1,4 +1,16 @@
 /* detail.wxss */
+@import "../../../templates/ratingbar/ratingbar.wxss";
+
+.ratingbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.ratingbar-score {
+    color: #999;
+    font-size: 20rpx;
+}
 
 /* .avatar-container{
   width: 100%;
@@ -16,77 +28,162 @@
 } */
 
 .avatar-container {
-  display: flex;
-  flex-direction: row;
-  height: 325rpx;
-  background-color: #403d3d;
+    display: flex;
+    flex-direction: row;
+    height: 325rpx;
+    background-color: #403d3d;
 }
 
 .avatar {
-  width: 194rpx;
-  height: 280rpx;
-  margin-left: 30rpx;
-  margin-top: 32rpx;
+    width: 194rpx;
+    height: 280rpx;
+    margin-left: 30rpx;
+    margin-top: 32rpx;
 }
 
 .content-wrapper {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .title {
-   margin-top: 34rpx;
-  color: #fff;
-  font-size: 40rpx;
-  margin-left: 26rpx;
+    margin-top: 34rpx;
+    color: #fff;
+    font-size: 40rpx;
+    margin-left: 26rpx;
 }
 
 .e_title {
-  color: #b4b3b4;
-  font-size: 30rpx;
-  margin-left: 26rpx;
+    color: #b4b3b4;
+    font-size: 30rpx;
+    margin-left: 26rpx;
 }
 
 .genres {
-  color: #b4b3b4;
-  font-size: 28rpx;
-  margin-left: 26rpx;
-  margin-top:10rpx;
+    color: #b4b3b4;
+    font-size: 28rpx;
+    margin-left: 26rpx;
+    margin-top: 10rpx;
 }
-.want-watch{
-  margin-left: 26rpx;
-  margin-top:5rpx;
-  color: #b4b3b4;
-  font-size: 28rpx;
-  flex-direction:row;
+
+.want-watch {
+    margin-left: 26rpx;
+    margin-top: 5rpx;
+    color: #b4b3b4;
+    font-size: 28rpx;
+    flex-direction: row;
 }
-.yellow{
-  font-size: 30rpx;
-  color: #f4bd4c;
-  font-weight: 580;
+
+.yellow {
+    font-size: 30rpx;
+    color: #f4bd4c;
+    font-weight: 580;
 }
-.container-wrapper-bottom{
-  height: 255rpx;
-  background-color: #403d3d;
-  display: flex;
-  flex-direction: row;
+
+.container-wrapper-bottom {
+    height: 255rpx;
+    background-color: #403d3d;
+    display: flex;
+    flex-direction: row;
 }
-.btn{
-  width: 335rpx;
-  height: 78rpx;
-  background-color: #565255;
-  color: #fff;
-  font-size:32rpx;
-  margin-top: 150rpx;
+
+.btn {
+    width: 335rpx;
+    height: 78rpx;
+    background-color: #565255;
+    color: #fff;
+    font-size: 32rpx;
+    margin-top: 120rpx;
 }
-.icon{
-  width: 34rpx;
-  height: 34rpx;
-  margin-right: 10rpx;
+
+.icon {
+    width: 34rpx;
+    height: 34rpx;
+    margin-right: 10rpx;
 }
-.summary{
-  font-size:25rpx;
-  padding:20rpx;
-  overflow: hidden;
-  height:114rpx;
+
+.summary {
+    font-size: 25rpx;
+    padding: 20rpx;
+    overflow: hidden;
+    height: 114rpx;
+}
+
+.review-wrapper {
+    display: flex;
+}
+
+.review-wrapper>image {
+    width: 70rpx;
+    height: 70rpx;
+    border-radius: 50%;
+    margin-top: 20rpx;
+    margin-left: 30rpx;
+}
+
+.author-name {
+    font-size: 30rpx;
+    margin-left: 25rpx;
+    margin-top: 20rpx;
+}
+
+.signature {
+    font-size: 25rpx;
+    color: #a5a5a5;
+    margin-left: 25rpx;
+}
+
+.review-content {
+    font-size: 32rpx;
+    margin-left: 25rpx;
+    margin-top: 35rpx;
+    margin-right: 42rpx;
+}
+
+.line {
+    border-bottom: 1px solid #f5f5f5;
+    width: 100%;
+    padding-top: 20rpx;
+}
+
+.time {
+    font-size: 25rpx;
+    color: #a5a5a5;
+    margin-top: 20rpx;
+    margin-left: 25rpx;
+}
+
+.useful {
+    border: 1px solid #a5a5a5;
+    font-size: 25rpx;
+    color: #a5a5a5;
+    margin-top: 20rpx;
+    margin-right: 42rpx;
+    padding: 8rpx;
+    border-radius: 10rpx;
+}
+
+.average {
+    color: #f4bd4c;
+    text-align: center;
+     font-size: 60rpx;
+}
+
+.rating-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    font-size: 60rpx;
+    background-color: #403d3d
+}
+
+.average-title {
+    font-size: 30rpx;
+    color: #a5a5a5;
+    text-align: center;
+}
+.collect{
+    font-size: 25rpx;
+    color: #a5a5a5;
+    text-align: center;
 }
